tests/golden/types/invalid_badtypes.rego
package bad_types

bad_types(a, b) = c {
    a = b
    b + "wat" = c
}
